--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="FlipCard!" />
+    <meta property="og:site_name" content="FlipCard!" />
+    <meta
+      property="og:description"
+      content="Somebody send you a FlipCard! Oooh, what can it be?"
+    />
+    <meta property="og:url" content="https://flipcard.fun" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
