--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:site_name" content="FlipCard!" />
     <meta
       property="og:description"
-      content="Somebody send you a FlipCard! Oooh, what can it be?"
+      content="Some cool person sent you a FlipCard! Oooh, what can it be?"
     />
     <meta property="og:url" content="https://flipcard.fun" />
     <!--
