--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="FlipCard!" />
-    <meta property="og:site_name" content="FlipCard!" />
+    <meta property="og:title" content="Flipcard" />
+    <meta property="og:site_name" content="Flipcard" />
     <meta
       property="og:description"
-      content="Some cool person sent you a FlipCard! Oooh, what can it be?"
+      content="Some cool person sent you a flipcard!"
     />
     <meta property="og:url" content="https://flipcard.fun" />
     <!--
@@ -20,6 +20,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
